--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,126 @@
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
 body {
-    background-image: url(https://images.adsttc.com/media/images/617c/4788/1239/130b/f29b/7e25/large_jpg/koriko.jpg?1635534735);
-    background-size: cover;
-    background-image: alpha(opacity=40);
+  color: #000000;
+  font-size: 16px;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
 }
-h1 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 100px;
-    font-weight: bold;
-    color: rgb(3, 53, 36);
-    text-align: center;
+.banner-one {
+  background: #0e8dee;
 }
-h2 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 50px;
-    color:rgb(0, 22, 15);
-    text-align: center;
+.banner-one-content {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-img {
-    align-items: center;
+.container {
+  margin: auto;
+}
+.img-logo1 {
+  width: 180px;
+  height: 50px;
+}
+.banner-two {
+  /* background-image: url(https://images.adsttc.com/media/images/617c/4788/1239/130b/f29b/7e25/large_jpg/koriko.jpg?1635534735);
+  background-size: cover;
+  background-image: alpha(opacity=40); */
+  background: #000000;
+}
+.banner-two-content {
+  width: 100%;
+}
+.buttons-model {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.select-buttons {
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  background: #00b3ff;
+  border: #00b3ff;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 0 20px;
+}
+.cards-model {
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.cards-data {
+  margin: 40px auto;
+  width: 230px;
+  padding: 20px;
+  background: #2945ab;
+  border-radius: 8px;
+  box-shadow: 5px 5px #a4a2a2af;
+}
+.subtitle {
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  padding: 15px;
+  font-family: "Chewy", cursive;
+}
+.fig-cards {
+  display: flex;
+  justify-content: center;
+}
+.img-cards {
+  width: 200px;
+  height: 300px;
+  border-radius: 5px;
+}
+
+.films-name {
+  color: #ffffff;
+}
+.information {
+  /* background: #3f3f46; */
+  background: #0e8dee;
+
+  color: #ffffff;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+}
+.icon-wsp {
+  background-color: #00e676;
+  border: #00e676;
+  width: 250px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 40px;
+  align-items: center;
+  color: #ffffff;
+  bottom: 10px;
+  left: 10px;
+  position: fixed;
+}
+.disclaimer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.text-disclaimer {
+  font-size: 20px;
+  width: 900px;
+}
+.by {
+  display: flex;
+  justify-content: center;
+  padding: 20px 100px 0;
 }
