--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,12 @@
   margin: 0;
 }
 body {
+  background: #00283a;
   color: #000000;
   font-size: 16px;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
-}
-.banner-one {
-  background: #0e8dee;
 }
 .banner-one-content {
   width: 100%;
@@ -18,95 +16,100 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: #45b8db;
+  position: fixed;
+  top: 0;
 }
 .container {
   margin: auto;
 }
 .img-logo1 {
-  width: 180px;
+  width: 210px;
   height: 50px;
+  padding-left: 30px;
 }
 .banner-two {
-  /* background-image: url(https://images.adsttc.com/media/images/617c/4788/1239/130b/f29b/7e25/large_jpg/koriko.jpg?1635534735);
-  background-size: cover;
-  background-image: alpha(opacity=40); */
-  background: #000000;
+  background: #00283a;
 }
 .banner-two-content {
   width: 100%;
+  height: 100%;
+  padding: 70px;
+  padding-top: 100px;
 }
 .buttons-model {
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 100px;
+  padding-bottom: 50px;
 }
 .select-buttons {
-  width: 200px;
+  width: 250px;
   height: 40px;
+  background: #76dfffd3;
+  color: #000000;
   border-radius: 10px;
-  background: #00b3ff;
-  border: #00b3ff;
-  color: #ffffff;
-  font-size: 20px;
+  border-style: inset;
+  border-width: 2px;
+  border-image: initial;
+  font-size: 17px;
   padding: 0 20px;
+  cursor: pointer;
+}
+.plus {
+  background: #d1d1d1ab;
+  color: #000000;
+}
+.select-buttons option {
+  background: #f5f5f5;
+  color: #000000;
+  width: 300px;
+  font-size: 15px;
+  padding: 0 14px;
 }
 .cards-model {
-  display: flex;
-  text-align: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 10px;
+  padding-bottom: 90px;
 }
 .cards-data {
-  margin: 40px auto;
-  width: 230px;
-  padding: 20px;
-  background: #2945ab;
+  margin: 10px auto;
+  width: 190px;
+  height: 300px;
+  padding: 10px;
+  border-style: outset;
   border-radius: 8px;
-  box-shadow: 5px 5px #a4a2a2af;
+  cursor: pointer;
 }
-.subtitle {
-  color: white;
-  text-align: center;
-  font-size: 40px;
-  padding: 15px;
-  font-family: "Chewy", cursive;
+.cards-data:hover {
+  box-shadow: 6px 6px rgba(0, 0, 0, 0.816);
 }
 .fig-cards {
   display: flex;
   justify-content: center;
 }
 .img-cards {
-  width: 200px;
-  height: 300px;
+  width: 170px;
+  height: 240px;
   border-radius: 5px;
 }
-
 .films-name {
   color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
 }
 .information {
-  /* background: #3f3f46; */
-  background: #0e8dee;
-
-  color: #ffffff;
+  background: #45b8db;
+  color: #fef5f5;
   width: 100%;
-  height: 100px;
+  height: 60px;
   display: flex;
   justify-content: center;
-}
-.icon-wsp {
-  background-color: #00e676;
-  border: #00e676;
-  width: 250px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  border-radius: 40px;
-  align-items: center;
-  color: #ffffff;
-  bottom: 10px;
-  left: 10px;
+  bottom: 0;
   position: fixed;
 }
 .disclaimer {
@@ -116,11 +119,7 @@ body {
   align-items: center;
 }
 .text-disclaimer {
-  font-size: 20px;
+  font-size: 17px;
+  font-family: "Montserrat", sans-serif;
   width: 900px;
-}
-.by {
-  display: flex;
-  justify-content: center;
-  padding: 20px 100px 0;
 }
