Modificacion de fondo y CSS

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,19 @@
+body {
+	background-image: url("extra/image.png");
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: auto;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: scroll;
+	}
 
 #menu {
-    box-shadow: 0px 10px 14px -7px #276873;
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	background-color:#599bb3;
+    box-shadow: 0px 10px 14px -7px #a1a3e1;
+	background:linear-gradient(to bottom, #0927ec 5%, #030b47 100%);
+	background-color:#04239f;
 	border-radius:8px;
 	display:inline-block;
 	cursor:pointer;
@@ -12,13 +23,15 @@
 	font-weight:bold;
 	padding:13px 32px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #3d768a;
+	text-shadow:0px 1px 0px #1117ca;
     width: 90%;
     text-align: center;  
     margin-left: 2%;
+	
 }
 
 #home, #pokedex, #map, #extra{
+	font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     box-shadow: 3px 4px 0px 0px #899599;
 	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
 	background-color:#ededed;
@@ -26,7 +39,7 @@
 	border:1px solid #d6bcd6;
 	display:inline-block;
 	cursor:pointer;
-	color:#3a8a9e;
+	color:#121db6;
 	font-family:Arial;
 	font-size: 100%;
 	padding:7px 25px;
@@ -35,19 +48,17 @@
     width: 12%;
     text-align: center; 
     margin-left: 5%; 
+	
 }
 
 #home:hover, #pokedex:hover, #map:hover, #extra:hover {
 	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
 	background-color:#bab1ba;
+
 }
 #home:active, #pokedex:active, #map:active, #extra:active{
 	position:relative;
-	top:5px;
+	top: 5px;
 }
 
-body {
-	background-image: url("Extras/IMG/FodoPoke.jpg");
-	
-}
 
