--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,7 @@ body {
   padding-bottom: 50px;
 }
 .select-buttons {
-  width: 250px;
+  width: 150px;
   height: 40px;
   background: #76dfffd3;
   color: #000000;
@@ -66,6 +66,19 @@ body {
   width: 300px;
   font-size: 15px;
   padding: 0 14px;
+}
+.buttons-restore {
+  width: 150px;
+  height: 40px;
+  background: #76dfffd3;
+  color: #000000;
+  border-radius: 10px;
+  border-style: inset;
+  border-width: 2px;
+  border-image: initial;
+  font-size: 17px;
+  padding: 0 20px;
+  cursor: pointer;
 }
 .cards-model {
   display: grid;
