--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,7 @@ body {
 }
 
 #home, #pokedex, #map, #extra{
+	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     box-shadow: 3px 4px 0px 0px #899599;
 	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
@@ -60,5 +61,23 @@ body {
 	position:relative;
 	top: 5px;
 }
+
+#bienvenida{
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	display: flex;
+	text-align: center;
+	width: 500px;
+	height: 180px;
+    justify-content: center;
+    border-style:double;
+    border-color: #ffaa22;
+    border-width: 10px;
+    margin-left: 60%;
+    margin-right: 10%;
+	margin-top: 5%;
+	background-color: white;
+
+}
+
 
 
