--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,7 @@ body {
 	background: linear-gradient(to bottom, #0927ec 5%, #030b47 100%);
 	background-color: #04239f;
 	border-radius: 8px;
+	display: flex;
 	display: inline-block;
 	cursor: pointer;
 	color: #ffffff;
@@ -84,11 +85,32 @@ body {
 	background-color: white;
 
 }
+#oak {
+
+	margin-left: 65%;
+}
+
 
 #carrusel {
 	display: flex;
-	position: absolute;
+	position: relative;
 	margin-right: 50%;
 	margin-top: 5%;
 }
+
+.pokemon-container {
+	font-family: ;
+	padding: 3%;
+	display: flex;
+	display: inline-block;
+	width: 16%;
+	margin-right: 2%;
+	margin-top: 2%;
+	background-color: rgba(200, 196, 196, 0.757);
+	
+  }
+
+#pokemons {
+	margin-left: 30%;
+}  
 
