--- a/src/style.css
+++ b/src/style.css
@@ -13,12 +13,6 @@ body{
 
 #root{
     margin: 0px;
-    /* border-right-width: 10px;
-    border-left-width: 10px;
-    border-left-style: solid;
-    border-right-style: solid ;
-    border-right-color: #49a4e1;
-    border-left-color: #49a4e1; */
     padding: 0px;
     width: 100%;
     height: 100vh;
@@ -26,18 +20,17 @@ body{
 }
 
 header{
-    margin: 0px;
-    height: 20%;
+    margin-top: 10px;
+    height: 140px;
     width: 100%;
 }
 
 .logo{
-    margin: 0;
+    margin-top: 10px;
     display: flex;
     background-color: #49a4e1;
-    padding-bottom: 15px;
     width: 100%;
-    height: 70%;
+    height: 100px;
 }
 
 .ghibli1{
@@ -47,11 +40,11 @@ header{
 }
 
 .barra{
-    margin: 0;
     display: flex;
+    margin: 0;
     background-color: #49a4e1;
     width: 100%;
-    height: 30%;
+    height: 40px;
 }
 
 .buscar{
@@ -98,8 +91,9 @@ input{
 }
 
 section{
+    margin: 0px;
     background-color: #F7F8F7;
-    height: 77%;
+    height: 215px;
 }
 
 footer{
@@ -116,8 +110,8 @@ footer{
 }
 	
 #left, #right{
-	margin-top: 0px;
-    margin-bottom: 0px;
+	top: 0px;
+    bottom: 0px;
 	width: 10px;
 }
 	
@@ -142,3 +136,8 @@ footer{
 #bottom {
     bottom: 0;
 }
+
+/*trabajando en card 1 jackeline*/
+
+
+/*trabajando en card 2 Ale*/
