--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background: #45b8db;
   position: fixed;
@@ -28,6 +28,14 @@ body {
   height: 50px;
   padding-left: 30px;
 }
+.nav-texts {
+  color: whitesmoke;
+  text-decoration: none;
+  font-weight: 600;
+}
+.nav-texts:hover {
+  color: #000000;
+}
 .banner-two {
   background: #00283a;
 }
@@ -40,11 +48,24 @@ body {
 .buttons-model {
   display: flex;
   justify-content: center;
-  gap: 100px;
+  gap: 90px;
   padding-bottom: 50px;
 }
+.buttons-design {
+  display: flex;
+  gap: 10px;
+  font-size: 20px;
+}
+.text-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  font-family: "Roboto Mono", monospace;
+  font-size: 15px;
+}
 .select-buttons {
-  width: 150px;
+  width: 195px;
   height: 40px;
   background: #76dfffd3;
   color: #000000;
@@ -52,13 +73,28 @@ body {
   border-style: inset;
   border-width: 2px;
   border-image: initial;
-  font-size: 17px;
+  font-size: 15px;
   padding: 0 20px;
   cursor: pointer;
 }
-.plus {
-  background: #d1d1d1ab;
+.plusOne {
+  background: #a9def9;
   color: #000000;
+}
+.plusTwo {
+  background: #ff0a54;
+  border: #767676;
+  color: #000000;
+  border-style: inset;
+  border-width: 2px;
+  border-image: initial;
+  border-radius: 10px;
+  width: 90px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  font-family: "Oswald", sans-serif;
+  font-size: 17px;
 }
 .select-buttons option {
   background: #f5f5f5;
@@ -66,19 +102,6 @@ body {
   width: 300px;
   font-size: 15px;
   padding: 0 14px;
-}
-.buttons-restore {
-  width: 150px;
-  height: 40px;
-  background: #76dfffd3;
-  color: #000000;
-  border-radius: 10px;
-  border-style: inset;
-  border-width: 2px;
-  border-image: initial;
-  font-size: 17px;
-  padding: 0 20px;
-  cursor: pointer;
 }
 .cards-model {
   display: grid;
@@ -107,7 +130,7 @@ body {
   height: 240px;
   border-radius: 5px;
 }
-.films-name {
+.text-films {
   color: #ffffff;
   display: flex;
   justify-content: center;
@@ -117,7 +140,8 @@ body {
 }
 .information {
   background: #45b8db;
-  color: #fef5f5;
+  color: #000000;
+  font-weight: 800;
   width: 100%;
   height: 60px;
   display: flex;
@@ -135,4 +159,23 @@ body {
   font-size: 17px;
   font-family: "Montserrat", sans-serif;
   width: 900px;
+}
+@media (max-width: 768px) {
+  .cards-model {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .buttons-model {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .cards-model {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .buttons-model {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
 }
