Cambios de segunda vista y grafico

--- a/src/style.css
+++ b/src/style.css
@@ -33,13 +33,9 @@ body {
   text-decoration: none;
   font-weight: 600;
 }
-<<<<<<< HEAD
-
-=======
 .nav-texts:hover {
   color: #000000;
 }
->>>>>>> efac756d1297e5a1feaee8c0462c23c72f67280a
 .banner-two {
   background: #00283a;
 }
@@ -164,27 +160,21 @@ body {
   font-family: "Montserrat", sans-serif;
   width: 900px;
 }
-<<<<<<< HEAD
-
-
-=======
-@media (max-width: 768px) {
-  .cards-model {
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .buttons-model {
-    flex-wrap: wrap;
-    gap: 10px;
-  }
+.myChart {
+  font-family: "Montserrat", sans-serif;
+  font-size: 10px;
+  color: #f5f5f5;
+  text-align: right;
+  max-width: 600px;
+  max-height: 600px;
+  margin-left: 450px;
+  margin-bottom: 50px;
+}
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  color: #f5f5f5;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
-@media (max-width: 600px) {
-  .cards-model {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .buttons-model {
-    flex-wrap: wrap;
-    gap: 10px;
-  }
-}
->>>>>>> efac756d1297e5a1feaee8c0462c23c72f67280a
