--- a/src/style.css
+++ b/src/style.css
@@ -29,12 +29,13 @@ body {
   padding-left: 30px;
 }
 .nav-texts {
-  color: whitesmoke;
+  color: #000000;
   text-decoration: none;
   font-weight: 600;
+  font-family: "Bree Serif", serif;
 }
 .nav-texts:hover {
-  color: #000000;
+  color: #ffffff;
 }
 .banner-two {
   background: #00283a;
@@ -156,7 +157,7 @@ body {
   align-items: center;
 }
 .text-disclaimer {
-  font-size: 17px;
+  font-size: 14px;
   font-family: "Montserrat", sans-serif;
   width: 900px;
 }
