--- a/src/style.css
+++ b/src/style.css
@@ -70,11 +70,14 @@ body {
 	top: 5px;
 }
 
+
+
 #welcome {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	position: Absolute;
 	width: 500px;
 	height: 350px;
+	border-radius: 25px;
 	justify-content: center;
 	border-style: double;
 	border-color: #ffaa22;
@@ -91,13 +94,41 @@ body {
 	margin-left: 65%;
 }
 
-
 #carrusel {
+    display: flex;
+    position: relative;
+    margin-right: 50%;
+    margin-top: 5%;
+}
+
+@media screen and (max-width: 768px) {
+    #carrusel {
+        margin-right: 0;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .pokemon-container {
+        width: 30%;
+        margin-right: 2%;
+        margin-top: 2%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .pokemon-container {
+        width: 45%;
+    }
+}
+
+
+
+/*#carrusel {
 	display: flex;
 	position: relative;
 	margin-right: 50%;
 	margin-top: 5%;
-}
+}*/
 
 .pokemon-container {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -108,9 +139,14 @@ body {
 	margin-right: 2%;
 	margin-top: 2%;
 	background-color: rgba(200, 196, 196, 0.871);
+	border-radius: 25px;
 
 }
-
+ h3 {
+	text-align: center;
+	font-size: x-large;
+	background-color: rgba(200, 196, 196, 0.899);
+ }
 #pokemons {
 	margin-left: 30%;
 }
@@ -119,7 +155,6 @@ body {
 	
 	margin-left: 10%;
 }
-
 
 #typeNormal,
 #typeFighting,
@@ -141,8 +176,23 @@ body {
 #typeFairy{
 width: 4%;
 background-color: rgba(200, 196, 196, 0.871);
+border-radius: 10px;
 }
+
 #allTypes {
 	width: 4.6%;
 	background-color: rgba(200, 196, 196, 0.871);
+	border-radius: 10px;
 }
+
+footer{
+	position: fixed;
+	bottom: 0;
+	text-align: center;
+	font-size: large;
+	background-color: rgba(200, 196, 196, 0.69);
+	padding: 0.5%;
+	width: 100%;
+	height: 40px;
+  }
+  
