--- a/src/style.css
+++ b/src/style.css
@@ -1,82 +1,62 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 body{
     background-image: url(https://c8.alamy.com/compes/2eww0mr/lineas-diagonales-patron-de-fondo-fondo-blanco-con-lineas-diagonales-grises-vector-eps-10-2eww0mr.jpg); /*imagen de fondo*/
 }
-/*EStilos del title*/
-.container-header{
-    background-color: #1d2647;
-    height: 4em;
-    width: 100%;
-    text-shadow: #64645c;
-    padding: 8px 0px 20px 0px ;
-    text-align: center;
+
+
+/*Nav and title*/
+.menu{
     position: fixed;
+    color: #ffff00;
+    width: 100%;
     z-index: 1000;
 }
-.container-header__title{
-    font-size: 40px;
-    color: #ffff00;
+.container-title{ /**/
+    flex: 100%;
+    padding: 10px;
+    background-color: #202f40;
+    text-align: center;
 }
-/* estilos de navegador */
-.container-nav{
-    height: 4em;
-    position: sticky;
-    top: 2.7em;
-
-}
-p {
-    font-size: 100px;
-}
-.container-nav ul{
-    width: 100%;
-    height: 100%;
-    list-style-type: none;
-    flex-flow: row wrap;
-    justify-content: flex-end;
-    display: flex;
-    align-items: center;
-}
- .container-nav__nav-li{
-    border-radius: 0px 0px 0px 25px;
-}
-.container-nav ul li{
-    margin: 22px 0;
-    padding:10px  30px;
-    background-color: #1d2647;
-    color: #fff;
+.container-title h1{
     font-size: 25px;
 }
-.container-nav ul li:hover{
+.menu_items{
+    margin: 1px 0px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    list-style-type: none;
+}
+.menu_items li{
+    color: #ffff00;
+    padding: 10px 30px;
+    background-color: #202f40;
+}
+.menu_items__li{
+    border-radius: 0px 0px 0px 25px;
+}
+.menu_items li:hover{
     background-color: #ffff00;
-    color: black;
+    color: #202f40;
 }
-.active{
-    background-color: aquamarine;
-    width: 200px;
-    height: 200px;
-}
-.active [data-content] {
+
+
+/*mostrar contenido ventanas dinamicas*/
+.active[data-content] {
     display: block;
 }
-[data-content]{
+
+[data-content] {
     display: none;
 }
 
 
-/*
-.container-nav{
-    background-color: aquamarine;
-    padding: 25px;
-}
-.container-nav ul{
-    list-style-type: none;
-    background-color: blueviolet;
-}
-.container-nav ul li{
-    display: block;
-    text-align: center;
+
+.colores{
+    color: #202f40;
+    color: #ffff00;
 }
