--- a/src/style.css
+++ b/src/style.css
@@ -10,18 +10,20 @@ body{
 /*     min-height: 100vh;
     min-width: 100vw; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 main{
-    margin: 10px;
     padding: 0px;
-    width: 100%;
-    height: 100%;
+    width: 99.2vw;
+    height: 100vw;
     display: block;
 }
 
 header{
-    height: 140px;
+    margin-top: 10px;
+    height: 200px;
     width: 100%;
 }
 
@@ -29,7 +31,7 @@ header{
     display: flex;
     background-color: #49a4e1;
     width: 100%;
-    height: 100px;
+    height: 140px;
 }
 
 .ghibli1{
@@ -40,15 +42,18 @@ header{
 
 .barra{
     display: flex;
-    margin: 0;
+    margin: 0px;
     background-color: #49a4e1;
     width: 100%;
-    height: 40px;
+    height: 60px;
+    font-size:1.5em;
+    vertical-align: middle;
 }
 
 .buscar{
     background-color: #49a4e1;
     width: 33%;
+    margin-top: 2px;
 }
 
 .buscador {
@@ -60,12 +65,12 @@ header{
 .b-busqueda{
     margin-left: 2px;
     margin-top: 2px;
-    margin-bottom: 10px;
 }
 
 .filtro{
     background-color: #49a4e1;
     width: 33%;
+    margin-top: 2px;
 }
 
 select{
@@ -87,12 +92,15 @@ input{
 .orden{
     background-color: #49a4e1;
     width: 34%;
+    margin-top: 2px;
 }
 
 section{
     padding: 15px;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 10px;
+    align-items: center;
 }
 
 .card {
@@ -131,11 +139,12 @@ section{
     justify-content: space-between;
     width: 100%;
     height: 100px;
-    z-index: 2;
+    /*z-index: 2;*/
 }
 
 .card-title {
     font-size: 16px;
+    margin: 5px;
 }
 .card-body h5,
 .card-body span {
@@ -182,28 +191,6 @@ section{
     bottom: 0;
 }
 
-/*trabajando en card 1 jackeline*/
-.card1, .card2, .card3, .card4, .card5, .card6 {
-    border: 15px solid #F7F8F7;
-    background-color: #49a4e1;
-    padding: 15px;
-    width: 19%;
-    height: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-/*.card2 {
-    border: 15px solid #F7F8F7;
-    background-color: #49a4e1;
-    padding: 15px;
-    width: 15%;
-    height: 45%;
-    display: inline-block;
-}*/
-
-/*trabajando en card 2 Ale*/
 
 
   
