dar formato al card para que no pierda sus dimensiones al cambiar de tamaño la pantalla y centrar elementos de section

--- a/src/style.css
+++ b/src/style.css
@@ -10,12 +10,13 @@ body{
 /*     min-height: 100vh;
     min-width: 100vw; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 main{
-    margin: 10px;
     padding: 0px;
-    width: 100%;
+    width: 99.2vw;
     height: 100vh;
     display: block;
 }
@@ -27,7 +28,6 @@ header{
 }
 
 .logo{
-    margin-top: 10px;
     display: flex;
     background-color: #49a4e1;
     width: 100%;
@@ -62,12 +62,12 @@ header{
 .b-busqueda{
     margin-left: 2px;
     margin-top: 2px;
-    margin-bottom: 10px;
 }
 
 .filtro{
     background-color: #49a4e1;
     width: 33%;
+    margin-top: 2px;
 }
 
 select{
@@ -89,12 +89,15 @@ input{
 .orden{
     background-color: #49a4e1;
     width: 34%;
+    margin-top: 2px;
 }
 
 section{
     padding: 15px;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 10px;
+    justify-content: center;
 }
 
 .card {
@@ -108,52 +111,38 @@ section{
     color: #fff;
     position: relative;
     overflow: hidden;
-    margin-bottom: 25px;
-    margin-right: 25px;
+    margin: 1.5%;
     flex: auto;
-    height: 400px;
-    width: 200px;
+    max-height: 400px;
+    max-width: 200px;
 }
 
 .card-body-img{
-    /* padding: 15px 15px 10px; */
     display: flex;
-    position: absolute;
-    background-color: #ff0000;
     overflow: hidden;
-    height: 300px;
-    width: 200px;
+    height: 300px
 }
 
 .poster {
     width: 100%;
     height: 100%;
-    margin-right: 10px;
-    position: absolute;
 }
 
 .card-body-text {
     display: flex;
-    justify-content: space-between;
-    z-index: 2;
-
-    position: absolute;
+    height: 100px;
+    width: 100%;
     flex-direction: column;
 }
 
 .card-title {
     font-size: 16px;
-}
-.card-body h5,
-.card-body span {
     margin: 5px;
 }
 
-/* footer{
-    background-color: #49a4e1;
-    height: 3%;
-    margin-bottom: 0;
-} */
+.card-body-text span {
+    margin-left: 5px;
+}
 
 /* Borde de la Pagina */
 #top, #bottom, #left, #right {
@@ -188,11 +177,3 @@ section{
 #bottom {
     bottom: 0;
 }
-
-/*trabajando en card 1 jackeline*/
-
-
-/*trabajando en card 2 Ale*/
-
-
-  
