--- a/src/style.css
+++ b/src/style.css
@@ -7,66 +7,26 @@ body{
     background-image: url(https://c8.alamy.com/compes/2eww0mr/lineas-diagonales-patron-de-fondo-fondo-blanco-con-lineas-diagonales-grises-vector-eps-10-2eww0mr.jpg); /*imagen de fondo*/
 }
 
-
-/*Nav and title*/
-.menu{
-    top: 0;
-    position: fixed;
-    color: #ffff00;
-    width: 100%;
-    z-index: 1000;
-}
-.container-title{ /**/
-    flex: 100%;
-    padding: 10px;
+/*Titulo Logo*/
+.container-title{ 
     background-color: #202f40;
-    text-align: center;
-}
-.container-title h1{
-    font-size: 25px;
-}
-.menu_items{
-    margin: 1px 0px;
+    justify-content: center;
     display: flex;
     flex-flow: row wrap;
-    justify-content: flex-end;
-    list-style-type: none;
+    height: 100px;
+    width: 100%;
+    position: fixed;
+    top:0px;
+    z-index: 1000;
 }
-.menu_items li{
-    color: #ffff00;
-    padding: 10px 30px;
-    background-color: #202f40;
+.container-logo{
+    width: 100%;
+    height: 100%;
 }
-.menu_items__li{
-    border-radius: 0px 0px 0px 25px;
-}
-.menu_items li:hover{
-    background-color: #ffff00;
-    color: #202f40;
-}
-
-
-/*Prueba de cuadro*/
-.cuadrodeTarjeta{
-    display: flex;
-    flex-flow: column wrap;
-    width: 200px;
-    height: 200px;
-    justify-content: flex-end;
-    margin: 20px;
-}
-section div ul{
-    margin: 20px;
-    padding: 5px;
-    border: 3px solid #202f40;
-}
-/*mostrar contenido ventanas dinamicas*/
-.active[data-content] {
-    display: block;
-}
-
-[data-content] {
-    display: none;
+.container-title img{
+    height: 100%;
+    width: 100%;
+    object-fit: contain; 
 }
 
 /*caja pokedex*/
@@ -77,12 +37,42 @@ section div ul{
   align-items: flex-start;
   background-color: blue;
 }
-.Cajon-pokedex p{
-    color: crimson;
+
+.card{
+    background-color:plum;
+    margin: 20px;
+    padding: 10px;
+    display: flex;
+    flex-flow: column wrap;
+
+ 
+}
+.card p{
+    border: 1px #202f40;
+    direction:ltr;
+
+}
+.pokemon-img{
+    background-color: rgb(20, 255, 59);
+}
+.pokemon-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
+/*buscador*/
+.bucador{
+    display: block;
+    background-color: red;
+    padding: 40px;
+    top: 150px;
+    position: absolute;
+    z-index:1;
 
+}
 
+/*colores*/
 .colores{
     color: #202f40;
     color: #ffff00;
