--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,8 @@ body {
 }
 
 #buttonHome,
-#buttonPokedex {
+#buttonPokedex,
+#buttonExtra{
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   box-shadow: 3px 4px 0px 0px #899599;
@@ -51,13 +52,15 @@ body {
 }
 
 #buttonHome:hover,
-#buttonPokedex:hover {
+#buttonPokedex:hover,
+#buttonExtra:hover {
   background: linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
   background-color: #bab1ba;
 }
 
 #buttonHome:active,
-#buttonPokedex:active{
+#buttonPokedex:active,
+#buttonExtra:active{
   position: relative;
   top: 5px;
 }
@@ -146,6 +149,29 @@ h3 {
   border-radius: 10px;
 }
 
+#typeNormal:active,
+#typeFighting:active,
+#typeFlying:active,
+#typePoison:active,
+#typeGround:active,
+#typeRock:active,
+#typeBug:active,
+#typeGhost:active,
+#typeSteel:active,
+#typeFire:active,
+#typeWater:active,
+#typeGrass:active,
+#typeElectric:active,
+#typePsychic:active,
+#typeIce:active,
+#typeDragon:active,
+#typeDark:active,
+#typeFairy:active,
+#allTypes:active{
+  position: relative;
+  top: 5px;
+}
+
 .type-normal::before{
 background-color: #04239f;
 content: "Normal";
@@ -175,6 +201,8 @@ footer {
 #pokedexSecction {
   display: none;
 }
+
+
 
 main {
   box-sizing: border-box;
