Add: info back card in main, test for functions and images readme

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ html{
 
 body{
     margin-bottom: 50px;
-    background-image: url('images/fondo\ 4.png');
+    background-image: url('images/fondo4.png');
 }
 
 .container{
