--- a/src/style.css
+++ b/src/style.css
@@ -125,6 +125,26 @@ h3 {
 #filterType {
   margin-left: 10%;
 }
+#order-select{
+  display: inline-block;
+	width: 15%;
+	cursor: pointer;
+  	padding: 7px 15px;
+  	height: 42px;
+  	outline: 0; 
+  	border: 0;
+	border-radius: 0;
+  margin-left: 45%;
+	background: #f0f0f0c4;
+	color: #080808;
+	font-size: 1em;
+	color: rgb(0, 0, 0);
+	font-family: 'Quicksand', sans-serif;
+	border:2px solid rgba(0,0,0,0.2);
+    border-radius: 12px;
+    position: center;
+    transition: all 0.25s ease;
+}
 
 #typeNormal,
 #typeFighting,
@@ -200,6 +220,79 @@ footer {
 
 #pokedexSecction {
   display: none;
+}
+
+/*.contenedor-principal{
+  display: flex; /* Modificado 
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+*%
+.spawnMin-container {
+  flex: 1 1 50%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 2%;
+  width: 20%; /* Ajustar el ancho 
+  margin-right: 2%; /* Ajustar el margen 
+  margin-top: 2%;
+  background-color: rgba(200, 196, 196, 0.871);
+  border-radius: 25px;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.spawnMax-container{
+  flex: 1 1 50%;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 2%;
+  width: 20%; /* Ajustar el ancho 
+  margin-left: 2%; /* Ajustar el margen 
+  margin-top: 2%;
+  background-color: rgba(200, 196, 196, 0.871);
+  border-radius: 25px;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+*/
+#mostrarPokeSpawn {
+  margin-left: 15%;
+  display: flex;
+  flex-wrap: wrap;
+  font-display: column;
+  width: 100%;
+}
+.containerClass {
+  display: flex;
+  width: 100%;
+  font-display: column;
+  flex-wrap: wrap;
+}
+ .spawnMax-container {
+  flex: 1 0 auto;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  position: static;
+  padding: 2%;
+  width: 20%; /* Modificado */
+  margin-left: 5%; /* Ajustar el margen */
+  margin-top: 2%;
+  background-color: rgba(200, 196, 196, 0.871);
+  border-radius: 25px;
+  justify-content: flex-start;
+  align-items: stretch;
+ }
+ .spawnMin-container {
+  flex: 1 0 auto;
+  flex-direction: column;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 2%;
+  width: 20%; /* Modificado */
+  margin-right: 5%; /* Ajustar el margen */
+  margin-top: 2%;
+  background-color: rgba(200, 196, 196, 0.871);
+  border-radius: 25px;
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
 
