--- a/src/style.css
+++ b/src/style.css
@@ -256,17 +256,19 @@ footer {
 }
 */
 #mostrarPokeSpawn {
-  margin-left: 15%;
+  margin-left: 5%;
   display: flex;
   flex-wrap: wrap;
-  font-display: column;
   width: 100%;
+  height: 2900px;
+  flex-direction: column;
 }
+
 .containerClass {
   display: flex;
   width: 100%;
   font-display: column;
-  flex-wrap: wrap;
+  flex-wrap: wrap;*/
 }
  .spawnMax-container {
   flex: 1 0 auto;
@@ -283,16 +285,13 @@ footer {
  }
  .spawnMin-container {
   flex: 1 0 auto;
-  flex-direction: column;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 2%;
   width: 20%; /* Modificado */
-  margin-right: 5%; /* Ajustar el margen */
+  margin-right: 5%;
   margin-top: 2%;
   background-color: rgba(200, 196, 196, 0.871);
   border-radius: 25px;
-  justify-content: flex-start;
-  align-items: stretch;
 }
 
 
@@ -300,7 +299,7 @@ footer {
 main {
   box-sizing: border-box;
   height: 100%;
-  margin-bottom: 50%;
+  margin-bottom: 5%;
 }
 
 
