--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,12 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     flex-wrap: wrap;
+    cursor: url("./img/totorohoja.png"), auto;
 }
 
 main{
     padding: 0px;
-    width: 99.2vw;
+    width: 100vw;
     height: 100vh;
     display: block;
 }
@@ -120,12 +121,12 @@ section{
 .card-body-img{
     display: flex;
     overflow: hidden;
-    height: 300px
+    height: 300px;
 }
 
 .poster {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
 }
 
 .card-body-text {
@@ -142,6 +143,11 @@ section{
 
 .card-body-text span {
     margin-left: 5px;
+}
+
+a{
+    display: absolute;
+    z-index: 100;
 }
 
 /* Borde de la Pagina */
